# chat-with-cv

./: .gitignore  cv.md  pyproject.toml
app/api/: routes.py
app/services/: vector_db.py
